test/corpus/comments.txt
========================================================================
standalone comment
========================================================================

# This is a line comment.
# It can span over multiple lines.

---

(source_file
  (comment)
  (comment))

========================================================================
trailing comment
========================================================================

2 + 2 # trailing comment

---

(source_file
  (expression
    (additive_expression
      (primary
        (number
          (decimal_number)))
      (primary
        (number
          (decimal_number)))))
  (comment))

========================================================================
comment between statements
========================================================================

let x = 1
# a comment between statements
let y = 2

---

(source_file
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number)))))
  (comment)
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number))))))

========================================================================
comment at end of file
========================================================================

1
# no trailing newline after this comment

---

(source_file
  (expression
    (primary
      (number
        (decimal_number))))
  (comment))

========================================================================
comment inside function body
========================================================================

fn double(x) =
  # multiply by two
  2 x

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (comment)
    (expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier))))))

========================================================================
comment inside struct definition
========================================================================

struct Point {
  # horizontal position
  x: Scalar,
  y: Scalar,
}

---

(source_file
  (struct_declaration
    (identifier)
    (comment)
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))
    (struct_field
      (identifier)
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier)))))))))
