test/corpus/procedures.txt
========================================================================
print a string
========================================================================

print("hello world")

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (primary
          (string
            (fixed_string
              (string_content))))))))

========================================================================
print a quantity
========================================================================

print(2 kilowarhol)

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
print with interpolation
========================================================================

print("value of pi = {pi}")

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (primary
          (string
            (interpolated_string
              (string_content)
              (interpolation
                (expression
                  (primary
                    (identifier)))))))))))

========================================================================
print with conversion in interpolation
========================================================================

print("Avg. speed: {distance / time -> km/h}")

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (primary
          (string
            (interpolated_string
              (string_content)
              (interpolation
                (expression
                  (conversion_expression
                    (multiplicative_expression
                      (primary
                        (identifier))
                      (primary
                        (identifier)))
                    (multiplicative_expression
                      (primary
                        (identifier))
                      (primary
                        (identifier)))))))))))))

========================================================================
assert
========================================================================

assert(1 yard < 1 meter)

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (comparison_expression
          (implicit_multiplication
            (primary
              (number
                (decimal_number)))
            (primary
              (identifier)))
          (implicit_multiplication
            (primary
              (number
                (decimal_number)))
            (primary
              (identifier))))))))

========================================================================
assert with negation
========================================================================

assert(!is_empty(xs))

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (not_expression
          (call_expression
            (primary
              (identifier))
            (argument_list
              (expression
                (primary
                  (identifier))))))))))

========================================================================
assert_eq with two arguments
========================================================================

assert_eq(12 in, 1 ft)

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier))))
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
assert_eq with three arguments
========================================================================

assert_eq(1 yd, 1 m, 10 cm)

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier))))
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier))))
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
type procedure
========================================================================

type(2 m/s)

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (multiplicative_expression
          (implicit_multiplication
            (primary
              (number
                (decimal_number)))
            (primary
              (identifier)))
          (primary
            (identifier)))))))

========================================================================
procedure with expression argument
========================================================================

print(body_mass_index(70 kg, 1.75 m))

---

(source_file
  (procedure_call
    (argument_list
      (expression
        (call_expression
          (primary
            (identifier))
          (argument_list
            (expression
              (implicit_multiplication
                (primary
                  (number
                    (decimal_number)))
                (primary
                  (identifier))))
            (expression
              (implicit_multiplication
                (primary
                  (number
                    (decimal_number)))
                (primary
                  (identifier))))))))))
