test/corpus/statements.txt
========================================================================
simple constant definition
========================================================================

let n = 4

---

(source_file
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number))))))

========================================================================
constant with expression
========================================================================

let q1 = 2 m/s

---

(source_file
  (variable_declaration
    (identifier)
    (expression
      (multiplicative_expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))
        (primary
          (identifier))))))

========================================================================
constant with type annotation
========================================================================

let q2: Velocity = 2 m/s

---

(source_file
  (variable_declaration
    (identifier)
    (type_annotation
      (dimension_expression
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier))))))
    (expression
      (multiplicative_expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))
        (primary
          (identifier))))))

========================================================================
constant with complex type annotation
========================================================================

let q3: Length / Time = 2 m/s

---

(source_file
  (variable_declaration
    (identifier)
    (type_annotation
      (dimension_expression
        (dimension_factor
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier))))
          (dimension_power
            (dimension_primary
              (identifier))))))
    (expression
      (multiplicative_expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))
        (primary
          (identifier))))))

========================================================================
constant with unicode identifier
========================================================================

let ΔL = 3

---

(source_file
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number))))))

========================================================================
base dimension declaration
========================================================================

dimension Fame

---

(source_file
  (dimension_declaration
    (identifier)))

========================================================================
derived dimension declaration
========================================================================

dimension Deceleration = Length / Time^2

---

(source_file
  (dimension_declaration
    (identifier)
    (dimension_expression
      (dimension_factor
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier))))
        (dimension_power
          (dimension_primary
            (identifier))
          (dimension_exponent
            (number
              (decimal_number))))))))

========================================================================
dimension with rational exponent
========================================================================

dimension Jerk = Length / Time^3

---

(source_file
  (dimension_declaration
    (identifier)
    (dimension_expression
      (dimension_factor
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier))))
        (dimension_power
          (dimension_primary
            (identifier))
          (dimension_exponent
            (number
              (decimal_number))))))))

========================================================================
base unit declaration
========================================================================

unit thing

---

(source_file
  (unit_declaration
    (identifier)))

========================================================================
base unit with dimension
========================================================================

unit warhol: Fame

---

(source_file
  (unit_declaration
    (identifier)
    (dimension_expression
      (dimension_factor
        (dimension_power
          (dimension_primary
            (identifier)))))))

========================================================================
derived unit declaration
========================================================================

unit quork = 0.35 meter

---

(source_file
  (unit_declaration
    (identifier)
    (expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier))))))

========================================================================
derived unit with type annotation
========================================================================

unit clonk: Time = 0.2 seconds

---

(source_file
  (unit_declaration
    (identifier)
    (dimension_expression
      (dimension_factor
        (dimension_power
          (dimension_primary
            (identifier)))))
    (expression
      (implicit_multiplication
        (primary
          (number
            (decimal_number)))
        (primary
          (identifier))))))

========================================================================
unit derived from an expression
========================================================================

unit BMI: Mass / Length^2 = kg / m^2

---

(source_file
  (unit_declaration
    (identifier)
    (dimension_expression
      (dimension_factor
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier))))
        (dimension_power
          (dimension_primary
            (identifier))
          (dimension_exponent
            (number
              (decimal_number))))))
    (expression
      (multiplicative_expression
        (primary
          (identifier))
        (power_expression
          (primary
            (identifier))
          (primary
            (number
              (decimal_number))))))))

========================================================================
metric prefixes decorator
========================================================================

@metric_prefixes
unit clonk: Time = 0.2 seconds

---

(source_file
  (decorated_statement
    (decorator
      (identifier))
    (unit_declaration
      (identifier)
      (dimension_expression
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier)))))
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
binary prefixes decorator
========================================================================

@binary_prefixes
unit flop = 1

---

(source_file
  (decorated_statement
    (decorator
      (identifier))
    (unit_declaration
      (identifier)
      (expression
        (primary
          (number
            (decimal_number)))))))

========================================================================
abbreviation decorator
========================================================================

@abbreviation
unit thing

---

(source_file
  (decorated_statement
    (decorator
      (identifier))
    (unit_declaration
      (identifier))))

========================================================================
aliases decorator
========================================================================

@aliases(quorks)
unit quork = 0.35 meter

---

(source_file
  (decorated_statement
    (decorator
      (identifier)
      (decorator_arguments
        (identifier)))
    (unit_declaration
      (identifier)
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
aliases with prefix acceptance
========================================================================

@aliases(wh: short)
unit warhol: Fame

---

(source_file
  (decorated_statement
    (decorator
      (identifier)
      (decorator_arguments
        (identifier)))
    (unit_declaration
      (identifier)
      (dimension_expression
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier))))))))

========================================================================
multiple decorators
========================================================================

@metric_prefixes
@aliases(wh: short)
unit warhol: Fame

---

(source_file
  (decorated_statement
    (decorator
      (identifier))
    (decorator
      (identifier)
      (decorator_arguments
        (identifier)))
    (unit_declaration
      (identifier)
      (dimension_expression
        (dimension_factor
          (dimension_power
            (dimension_primary
              (identifier))))))))

========================================================================
documentation decorators
========================================================================

@name("Quork")
@url("https://example.com/quork")
@description("A completely made up unit.")
unit quork = 0.35 meter

---

(source_file
  (decorated_statement
    (decorator
      (identifier)
      (decorator_arguments
        (string
          (fixed_string
            (string_content)))))
    (decorator
      (identifier)
      (decorator_arguments
        (string
          (fixed_string
            (string_content)))))
    (decorator
      (identifier)
      (decorator_arguments
        (string
          (fixed_string
            (string_content)))))
    (unit_declaration
      (identifier)
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
example decorator
========================================================================

@example("quork_value(2)")
fn quork_value(x: Scalar) -> Scalar = 2 x

---

(source_file
  (decorated_statement
    (decorator
      (identifier)
      (decorator_arguments
        (string
          (fixed_string
            (string_content)))))
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (dimension_expression
              (dimension_factor
                (dimension_power
                  (dimension_primary
                    (identifier))))))))
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier))))))
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
example decorator with description
========================================================================

@example("quork_value(2)", "two quorks")
fn quork_value(x: Scalar) -> Scalar = 2 x

---

(source_file
  (decorated_statement
    (decorator
      (identifier)
      (decorator_arguments
        (string
          (fixed_string
            (string_content)))
        (string
          (fixed_string
            (string_content)))))
    (function_declaration
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (dimension_expression
              (dimension_factor
                (dimension_power
                  (dimension_primary
                    (identifier))))))))
      (type_annotation
        (dimension_expression
          (dimension_factor
            (dimension_power
              (dimension_primary
                (identifier))))))
      (expression
        (implicit_multiplication
          (primary
            (number
              (decimal_number)))
          (primary
            (identifier)))))))

========================================================================
module import
========================================================================

use prelude

---

(source_file
  (module_import
    (identifier)))

========================================================================
module import with path
========================================================================

use units::stoney
use numerics::fixed_point

---

(source_file
  (module_import
    (identifier)
    (identifier))
  (module_import
    (identifier)
    (identifier)))

========================================================================
definitions separated by semicolons
========================================================================

let x = 1; let y = 2; x + y

---

(source_file
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number)))))
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number)))))
  (expression
    (additive_expression
      (primary
        (identifier))
      (primary
        (identifier)))))

========================================================================
multiple statements separated by newlines
========================================================================

let x = 1
let y = 2
x + y

---

(source_file
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number)))))
  (variable_declaration
    (identifier)
    (expression
      (primary
        (number
          (decimal_number)))))
  (expression
    (additive_expression
      (primary
        (identifier))
      (primary
        (identifier)))))
