test/corpus/strings.txt
========================================================================
fixed string
========================================================================

"hello world"

---

(source_file
  (expression
    (primary
      (string
        (fixed_string
          (string_content))))))

========================================================================
empty string
========================================================================

""

---

(source_file
  (expression
    (primary
      (string
        (fixed_string)))))

========================================================================
string escapes
========================================================================

"a \"quote\", a backslash \\ and a newline \n"

---

(source_file
  (expression
    (primary
      (string
        (fixed_string
          (string_content))))))

========================================================================
single interpolation
========================================================================

"value of pi = {pi}"

---

(source_file
  (expression
    (primary
      (string
        (interpolated_string
          (string_content)
          (interpolation
            (expression
              (primary
                (identifier)))))))))

========================================================================
multiple interpolations
========================================================================

"{a} + {b} = {a + b}"

---

(source_file
  (expression
    (primary
      (string
        (interpolated_string
          (interpolation
            (expression
              (primary
                (identifier))))
          (string_content)
          (interpolation
            (expression
              (primary
                (identifier))))
          (string_content)
          (interpolation
            (expression
              (additive_expression
                (primary
                  (identifier))
                (primary
                  (identifier))))))))))

========================================================================
interpolation with conversion
========================================================================

"speed: {30 km/h -> mph}"

---

(source_file
  (expression
    (primary
      (string
        (interpolated_string
          (string_content)
          (interpolation
            (expression
              (conversion_expression
                (multiplicative_expression
                  (implicit_multiplication
                    (primary
                      (number
                        (decimal_number)))
                    (primary
                      (identifier)))
                  (primary
                    (identifier)))
                (primary
                  (identifier))))))))))

========================================================================
interpolation with an expression
========================================================================

"sqrt(10) = {sqrt(10)}"

---

(source_file
  (expression
    (primary
      (string
        (interpolated_string
          (string_content)
          (interpolation
            (expression
              (call_expression
                (primary
                  (identifier))
                (argument_list
                  (expression
                    (primary
                      (number
                        (decimal_number)))))))))))))

========================================================================
interpolation format specifiers
========================================================================

"pi is approximately {pi:.3}"

---

(source_file
  (expression
    (primary
      (string
        (interpolated_string
          (string_content)
          (interpolation
            (expression
              (primary
                (identifier)))
            (format_specifier)))))))

========================================================================
interpolation with conversion and format specifier
========================================================================

"latency: {latency -> ms:0.2f}"

---

(source_file
  (expression
    (primary
      (string
        (interpolated_string
          (string_content)
          (interpolation
            (expression
              (conversion_expression
                (primary
                  (identifier))
                (primary
                  (identifier))))
            (format_specifier)))))))

========================================================================
escaped braces
========================================================================

"an {{escaped}} brace"

---

(source_file
  (expression
    (primary
      (string
        (fixed_string
          (string_content))))))

========================================================================
interpolation containing a nested string
========================================================================

"{str_append("x", "y")}"

---

(source_file
  (expression
    (primary
      (string
        (interpolated_string
          (interpolation
            (expression
              (call_expression
                (primary
                  (identifier))
                (argument_list
                  (expression
                    (primary
                      (string
                        (fixed_string
                          (string_content)))))
                  (expression
                    (primary
                      (string
                        (fixed_string
                          (string_content))))))))))))))
